- added information on reporting bugs to the SUPPORT section of Imager.pm
- regops.perl now sorts the dumped data structure to produce minimal diffs
- quant.c now checks for integer overflow allocating its image data
- i_readraw_wiol() now checks for image creation failure
- i_readrgb_wiol() now checks for image creation failure
- i_writergb_wiol() was an empty stub, it now pushes an error message
  and explicitly returns failure.
- i_readrgb_wiol() now sets i_format to rgb.
- set i_format to raw when reading tga files and test for it
- document i_format tag
- some tests were using $Config{ivsize} when they should have been 
  using $Config{intsize}
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=8645
- tools/imager has been removed from the MANIFEST, it's way too late
  to test/debug for 0.44.
- image.h had no prototype for i_ft2_bbox_r() and it was being called
  from Imager.xs
- giflib 4.1.3 still doesn't have all the bugs fixed, update the notes
  in README and in the buggy_giflib.txt file that t105gif.t produces
- make the inclusion of NO_META dependent on the version of EU::MM.
  I was going to include a META.yml but EU::MM's generation is too 
  simplistic (and misses the leading document header too).  For now
  I'll leave it out.
- built 0.43_03 for testing

0.44
- modify the default include directories list to include the location
  FreeBSD keeps freetype1 headers after the freetype2 locations.
  This ensures that the -I options are generated with freetype2
  locations first, so that those directories are searched before
  the freetype1 directories.  This prevents problems compiling
  font.c on FreeBSD.
- finish off a sentence in the "Producing an image from a CGI script"
  example in Imager::Files

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
